--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   }
 
   body {
-    @apply bg-white text-gray-900 font-sans tracking-wide leading-relaxed;
+    @apply bg-white text-gray-900 font-sans tracking-wide leading-relaxed bg-sand;
   }
 
   h1 {
